--- a/back/src/test/resources/application-test.yml
+++ b/back/src/test/resources/application-test.yml
@@ -1,15 +1,17 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/testdb
-    username: test
-    password: test
-    driver-class-name: org.postgresql.Driver
-
+    url: jdbc:h2:mem:testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
   jpa:
     hibernate:
       ddl-auto: create-drop
-    show-sql: true
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    show-sql: false
+    database-platform: org.hibernate.dialect.H2Dialect
+  sql:
+    init:
+      mode: never
 
   data:
     redis:
@@ -68,3 +70,5 @@ app:
     enabled: true
     region: ap-northeast-2
     bucket: dummy-bucket
+  cdn:
+    domain: dummy-domain
