--- a/aws/k8s/service.yaml
+++ b/aws/k8s/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-app-service
+  name: trippin-backend
   namespace: default
 spec:
   type: ClusterIP
