dockerfile path change

--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -8,5 +8,5 @@ RUN gradle clean build -x test && cp build/libs/*.jar build/libs/app.jar
 # 2단계: 실행용 이미지
 FROM eclipse-temurin:17-jdk-jammy
 WORKDIR /app
-COPY --from=builder /app/build/libs/*.jar app.jar
+COPY --from=builder /app/build/libs/app.jar app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
