--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -8,5 +8,5 @@ RUN gradle clean build -x test
 # 2단계: 실행용 이미지
 FROM eclipse-temurin:17-jdk-jammy
 WORKDIR /app
-COPY --from=builder /app/back/build/libs/BE-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=builder /app/build/libs/BE-0.0.1-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
