--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -21,7 +21,7 @@ env:
 
   # ⭐️ Cloud Run이 실행될 '런타임 서비스 계정' 이메일 (매우 중요!)
   # 2단계에서 생성할 서비스 계정의 이메일 주소를 넣으세요.
-  GCP_RUNTIME_SA: trippin-run-sa@${{ env.GCP_PROJECT_ID }}.iam.gserviceaccount.com
+  GCP_RUNTIME_SA: trippin-run-sa@$concrete-acre-477518-s2.iam.gserviceaccount.com
 
 jobs:
   deploy-to-cloud-run:
