--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -68,11 +68,7 @@ jobs:
           service: ${{ env.SERVICE_NAME }}
           region: ${{ env.GCP_REGION }}
 
-          # ⭐️ Cloud Run이 실행될 서비스 계정 (DB, GCS 접근 권한 필요)
-          service_account: ${{ env.GCP_RUNTIME_SA }}
 
-          # ⭐️ Cloud SQL 인스턴스 연결 (INSTANCE_CONNECTION_NAME 시크릿 값)
-          add_cloudsql_instances: ${{ secrets.INSTANCE_CONNECTION_NAME }}
 
           # ⭐️ GitHub Secrets에 저장된 환경 변수들을 Cloud Run에 주입
           # (주의: 여기에 GOOGLE_APPLICATION_CREDENTIALS는 절대 넣지 마세요!)
@@ -98,3 +94,7 @@ jobs:
             GCS_BUCKET=${{ secrets.GCS_BUCKET }}
             GCS_DOMAIN=${{ secrets.GCS_DOMAIN }}
             CLOUD_SQL=${{ secrets.CLOUD_SQL }}
+
+          flags: |
+            --service-account=${{ env.GCP_RUNTIME_SA }}
+            --add-cloudsql-instances=${{ secrets.INSTANCE_CONNECTION_NAME }}
