feat: error correcting

--- a/front/android/app/src/main/AndroidManifest.xml
+++ b/front/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:supportsRtl="true">
+
+      <!-- 구글 맵 api? -->
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="YOUR_GOOGLE_MAPS_API_KEY" />
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
