--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "react": "19.1.0",
     "react-native": "0.80.1",
     "react-native-gesture-handler": "^2.27.1",
+    "react-native-maps": "^1.26.18",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
